Adjust for changes in master branch